--- a/app/src/main/res/layout/activity_content_details.xml
+++ b/app/src/main/res/layout/activity_content_details.xml
@@ -5,12 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:background="#212121">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#191919"
         tools:context=".activities.ContentDetailsActivity">
 
         <LinearLayout
