--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,6 @@
     android:textAlignment="viewEnd"
     tools:context=".activities.MainActivity">
 
-    <SearchView
-        android:id="@+id/v_list_sv_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#393939"
-        android:contextClickable="true"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="gone">
-
-    </SearchView>
-
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/main_tl_category"
         android:layout_width="match_parent"
@@ -30,7 +16,7 @@
         android:background="#303030"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/v_list_sv_search"
+        app:layout_constraintTop_toTopOf="parent"
         app:tabGravity="center"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="#ffffff"
@@ -42,6 +28,9 @@
         android:layout_height="wrap_content"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="@+id/main_tl_category"
-        app:layout_constraintTop_toBottomOf="@id/main_tl_category" />
+        app:layout_constraintTop_toBottomOf="@id/main_tl_category" >
+
+    </androidx.viewpager2.widget.ViewPager2>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
