--- a/app/src/main/res/layout/activity_vertical_list.xml
+++ b/app/src/main/res/layout/activity_vertical_list.xml
@@ -30,8 +30,9 @@
 
         <SearchView
             android:id="@+id/v_list_sv_search"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="#393939"
             android:contextClickable="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +41,16 @@
 
         </SearchView>
 
+        <ImageButton
+            android:id="@+id/v_list_btn_sort"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0"
+            android:background="#393939"
+            android:minWidth="50dp"
+            android:minHeight="50dp"
+            app:srcCompat="@android:drawable/ic_menu_sort_by_size"
+            app:tint="@color/white"/>
     </LinearLayout>
 
     <TextView
